--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,42 @@
-<h1>Home</h1>
 
-<h2 [class.gray]="h2Style">Hello!</h2>
+<h1>Welcome to the Sound To Color Experiment</h1>
+
+
+<p>This is an inquiry about participation in a research project where the main purpose is to 
+    study corelation between heard sound and color associations. 
+    In this letter we will give you information about the purpose of the project 
+    and what your participation will involve.</p>
+
+
+<h3>Purpose of the project</h3>
+<p>Visually impaired people have a chance to distinguish colours through sensory devices. The sensory devices read light waves and interpret them as colours. How should the sounds be defined to represent colour? What kind of translation should be used? 
+</p>
+<p>
+The purpose of this research is to observe sound to the colour association of non-visually impaired people and compare them to existing scales used for sensory devices. 
+</p>
+<p>
+This research is a part of IMT4894 - Advanced Project Work course which is given by NTNU in Gjøvik.
+</p>
+<p>In this research personal data are not collected. You cannot be identified in the collected data. Only the sound frequency and hue will be processed during the statistical analysis.</p>
+<h3>Who is responsible for the research project? </h3>
+<p>Person responsible for this project is Sabina Niewiadomska (sabinan@tud.ntnu.no), student of NTNU in Gjøvik.</p>
+<h3>What does participation involve for you?</h3>
+<p>
+In this research you will be asked to listen to the sound and associate with a heard sound a color.
+</p>
+<h3>Participation is voluntary </h3>
+<p>
+Participation in the project is voluntary. If you chose to participate, you can withdraw your consent at any time without giving a reason. All information about you will then be made anonymous. There will be no negative consequences for you if you chose not to participate or later decide to withdraw. 
+</p>
+
+Yours sincerely,<br>
+Sabina Niewiadomska
+
+<div class="jumbotron text-center">
+    <p>
+    To participate in the study please <b>turn on your speakers</b>. Participation in the study is possible with a use of smartphone and personal computer.
+</p>
+<div>
+        <button type="button" class="btn btn-success" routerLink="/test">I agree, go to study</button>
+</div> 
+</div>
