up text changed

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,6 +1,6 @@
-<h2>Welcome to the test</h2>
+<h2>Welcome to the test!</h2>
 
-<p>Here you will be presented with [number] of questions. 
+<p>You will be presented 40 short questions. 
   Please listen to the sound and intuitively associate the color with a sound.
 <b>Please turn on the speakers.</b></p>
 <!--text-center-->
