background on init deleted

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,10 +19,10 @@ This research is a part of IMT4894 - Advanced Project Work course which is given
 </p>
 <p>In this research personal data are not collected. You cannot be identified in the collected data. Only the sound frequency and hue will be processed during the statistical analysis.</p>
 <h3>Who is responsible for the research project? </h3>
-<p>Person responsible for this project is Sabina Niewiadomska (sabinan@tud.ntnu.no), student of NTNU in Gjøvik.</p>
+<p>Person responsible for this project is Sabina Niewiadomska (sabinan@stud.ntnu.no), student of NTNU in Gjøvik.</p>
 <h3>What does participation involve for you?</h3>
 <p>
-In this research you will be asked to listen to the sound and associate with a heard sound a color.
+In this research you will be asked to associate a heard sound with a color.
 </p>
 <h3>Participation is voluntary </h3>
 <p>
