test message updated

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,7 +1,7 @@
 <h2>Welcome to the test!</h2>
 
-<p>You will be presented 40 short questions. 
-  Please listen to the sound and intuitively associate the color with a sound.
+<p>You will be presented 80 short questions. 
+  Please intuitively associate the color with a sound.
 <b>Please turn on the speakers.</b></p>
 <!--text-center-->
 <div *ngFor="let question of questions; let i = index" class="card card-space">
