not added files

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="card text-center card-space card-body">
-    <button type="button" class="btn btn-success"
+    <button type="button" class="btn btn-success" id="btn-fire"
     (click)="sendToFirebase()">Send your answers!</button>
     <p id="thanks" style="display: none">Thank you!</p>
 </div>
