--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,9 @@
 <p>Visually impaired people have a chance to distinguish colours through sensory devices. The sensory devices read light waves and interpret them as colours. How should the sounds be defined to represent colour? What kind of translation should be used? 
 </p>
 <p>
-The purpose of this research is to observe sound to the colour association of non-visually impaired people and compare them to existing scales used for sensory devices. 
+<b>
+The purpose of this research is to observe sound to colour association of non-visually impaired people and compare them to existing scales used for sensory devices. 
+</b>
 </p>
 <p>
 This research is a part of IMT4894 - Advanced Project Work course which is given by NTNU in Gjøvik.
@@ -22,13 +24,20 @@ This research is a part of IMT4894 - Advanced Project Work course which is given
 <p>Person responsible for this project is Sabina Niewiadomska (sabinan@stud.ntnu.no), student of NTNU in Gjøvik.</p>
 <h3>What does participation involve for you?</h3>
 <p>
-In this research you will be asked to associate a heard sound with a color.
+In this research you will be asked to associate a heard sound with a color. <br> 
+<b>Research might takes around 10-20 minutes, depends on your tempo.</b>
 </p>
 <h3>Participation is voluntary </h3>
 <p>
 Participation in the project is voluntary. If you chose to participate, you can withdraw your consent at any time without giving a reason. All information about you will then be made anonymous. There will be no negative consequences for you if you chose not to participate or later decide to withdraw. 
 </p>
-
+<h3>How to withdraw?</h3>
+<p>There are two ways of withdrawing from the study:
+</p>
+<ul>
+    <li>Without saving the answers: just close the website</li>
+    <li><b>With saving answers: please scroll down to the bottom of the page and click green button "Send your answers!"</b></li>
+</ul>
 Yours sincerely,<br>
 Sabina Niewiadomska
 
