--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,9 +17,9 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
- <!--      <div class="navbar-nav">
-          <a class="nav-item nav-link active" routerLink="/about">About<span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link active" routerLink="/contact">Contact<span class="sr-only">(current)</span></a>
-        </div> --> 
+     <div class="navbar-nav navbar-right">
+          <a class="nav-item nav-link active" routerLink="/results">Results<span class="sr-only">(current)</span></a>
+          <!--<a class="nav-item nav-link active" routerLink="/contact">Contact<span class="sr-only">(current)</span></a>-->
+        </div>
       </div>
     </nav>
